--- a/java/analyzer/pom.xml
+++ b/java/analyzer/pom.xml
@@ -23,6 +23,11 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0-rc2</version>
+        </dependency>
+        <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <version>3.4</version>
