Fixes to package.json details

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wikidata-map",
   "version": "1.0.0",
-  "description": "frontend to render density of wikidata items on a map",
+  "description": "frontend to render density of Wikidata items on a map",
   "repository": "git@github.com:wmde/wikidata-map.git",
-  "author": "addshore <adamshorland@gmail.com>",
+  "author": "addshore <addshorewiki@gmail.com",
   "license": "MIT"
 }
